# afkbotio

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  LICENSE  LICENSE_FAQ.md  README.md  SECURITY.md  TRADEMARKS.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
afkbot/: __init__.py  browser_backends.py  runtime_defaults.py  settings.py  version.py
afkbot/api/: __init__.py  app.py  chat_auth.py  chat_targeting.py  routes_auth.py  routes_chat.py  routes_connect.py  routes_health.py  routes_partyflow_webhooks.py  routes_plugins.py  ui_auth_middleware.py
afkbot/bootstrap/: AGENTS.md  IDENTITY.md  SECURITY.md  TOOLS.md
afkbot/cli/: command_errors.py  main.py  managed_runtime.py
afkbot/db/: bootstrap.py  bootstrap_runtime.py  engine.py  session.py  sqlite_resilience.py
afkbot/models/: __init__.py  automation.py  automation_edge.py  automation_flow.py  automation_node.py  automation_node_definition.py  automation_node_run.py  automation_node_version.py  automation_optimization_snapshot.py  automation_run.py  automation_trigger_cron.py  automation_trigger_webhook.py  automation_webhook_processed_event.py  base.py  channel_binding.py  channel_endpoint.py  channel_ingress_event.py  channel_ingress_pending_event.py  chat_session.py  chat_session_compaction.py  chat_session_turn_queue.py  chat_turn.py  chat_turn_idempotency.py  connect_access_token.py  connect_claim_token.py  connect_session_token.py  credential_profile.py  memory_item.py  pending_resume_envelope.py  pending_secure_request.py  profile.py  profile_memory_item.py  profile_policy.py  run.py  runlog_event.py  secret.py  subagent_task.py  task.py  task_attachment.py  task_dependency.py  (+5 more)
afkbot/repositories/: __init__.py  automation_graph_repo.py  automation_repo.py  automation_repo_claims.py  automation_repo_common.py  automation_repo_crud.py  channel_binding_repo.py  channel_endpoint_repo.py  (+24 more)
docs/: automation-node-runtime-design.md  diagnostic-logs.md  memory-v2-design.md  plugin-kanban-design.md  plugin-kanban-implementation-plan.md  plugin-system-rfc.md  task-flow-design.md  task-flow-implementation-status.md  task-flow-release-checklist.md  task-flow-rfc.md
scripts/: install.ps1  install.sh  task_flow_release_smoke.py  uninstall.ps1  uninstall.sh
tests/: conftest.py
(+989 files in other folders)
